<resources>
    <string name="app_name">GOGOCITA</string>
    <string name="User_name">User name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Dont_have_an_account">"Don't have an account?"</string>
    <string name="Ready_to_creat_your_services">Ready to creat your services</string>
    <string name="Now_you_will_creat_your_services">Now you will creat your service.\n
            Customer will see your service \n on dashboard and choose\n service if they want</string>
    <string name="Next">Next</string>
    <string name="Fill_the_form">Fill the form</string>
    <string name="Please_fill_all_information"> Please fill all information on the form.\n
        It is very important, customers will\n
        read your information before they\n
        choose your services.
    </string>
    <string name="Create_your_properties">Creat your properties</string>
    <string name="If_your_home_stay">If your homestay has many type\n
    of room. You can creat them add\n
    description carefully. Customers\n
    will have more choices.</string>
    <string name="Complete">Complete! Customers will find you</string>
    <string name="Customer_will_use">Customer will use our app to find\n
    you. Let prepare your rooms and\n
    wait for the first one.</string>
    <string name="Dashboard">Dashboard</string>
    <string name="My_profile">My profile</string>
    <string name="Update_my_profile">Update my profile</string>
    <string name="Change_password">Change password</string>
    <string name="History">History</string>
    <string name="Sign_out">Sign out</string>
    <string name="Creat_my_service">Creat my service</string>
    <string name="See_calendar">See calendar</string>
    <string name="login_with">Login with</string>
    <string name="facebook">Login with Facebook</string>
    <string name="gmail">Login with Google+</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_gmail">Login with Gmail</string>
    <string name="contentabout">Team GOGOCITA có 4 thành viên đến từ lớp 16T2. Hướng đến việc góp phần phát triển ngành du lịch lữ hành. GOGOCITA ra đời với 2 mục đích, thứ nhất là kết nối dịch vụ Homestay với nhu cầu khách du lịch, thứ hai là tạo ra những chuyến du lịch miễn phí mà hướng dẫn viên chính là các bạn SV. Team GOGOCITA hy vọng ứng dụng này sẽ góp phần vào sự phát triển của ngành du lịch.></string>
    <string name="nameofhomestay">NAME OF HOMESTAY</string>
    <string name="cancel">Cancel</string>
    <string name="checkin">Check in</string>
    <string name="checkout">Check out</string>
    <string name="aboutus">ABOUT US</string>
    <string name="CongPhu">Cong Phu</string>
    <string name="GiaHuy">Gia Huy</string>
    <string name="VanHoang">Van Hoang</string>
    <string name="YenNhi">Yen Nhi</string>
    <string name="headbackend">Head of Backend</string>
    <string name="headfrontend">Head of Frontend</string>
    <string name="op">Operator</string>
    <string name="contactus">Contact us: teamgogocita@gmail.com</string>
    <string name="thanks">THANK YOU!</string>
    <string name="changepass">CHANGE PASSWORD</string>
    <string name="enternewpass">Enter new password</string>
    <string name="reenternewpass">Re-enter new password</string>
    <string name="resetpass">Reset Password</string>
    <string name="comingsoon">COMMING SOON</string>
    <string name="contentcomingsoon">We will develop this functionally as quickly as possible</string>
    <string name="rate">4.5</string>
    <string name="love">120</string>
    <string name="comment">15</string>
    <string name="contenthomestay">Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here. Content of Homestay here</string>
    <string name="wifi">Wifi</string>
    <string name="freebreakfast">Free breakfast</string>
    <string name="swimmingpool">Swimming pool</string>
    <string name="ac">AC</string>
    <string name="votes">Votes</string>
    <string name="booknow">BOOK NOW</string>
    <string name="creatsv">Great! Your creat your service successful</string>
    <string name="returndash">RETURN DASHBOARD</string>
    <string name="creatyoursv">CREATE YOUR SERVICE</string>
    <string name="name">Name</string>
    <string name="groundhouse">Ground house</string>
    <string name="villa">Villa</string>
    <string name="bungalow">Bungalow</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="desc">Description</string>
    <string name="convinience">Convinience</string>
    <string name="uploadimage">Upload image</string>
    <string name="price">Price: </string>
    <string name="price1">VND/room/night</string>
    <string name="complete">COMPLETE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="contentfeedback">Thanks for using our service, please give us feedback to improve our service. Thanks!</string>
    <string name="yourfeedback">Your feedback</string>
    <string name="send">SEND</string>
    <string name="sendfeedback">Your feedback had been sent</string>
<string name="forgotpass">FORGOT PASSWORD</string>
    <string name="ctforgotpass">Please enter your email and we will send an OTP number</string>
    <string name="email">Email</string>
    <string name="acesssmail">Acess your email to reser passwork</string>
    <string name="returntologin">Return to Login</string>
    <string name="formbook">FORM BOOK</string>
    <string name="date">02/12/2018</string>
    <string name="status">Status</string>
    <string name="confirm">Confirm</string>
    <string name="asc">ASC</string>
    <string name="des">DESC</string>
    <string name="listbook">LIST BOOK</string>
    <string name="donthavaacc">Don\'t have an account\?</string>
    <string name="signup">SIGN UP</string>
    <string name="youremail">Your Email</string>
    <string name="youare">You Are</string>
    <string name="repeatpass">Repeat Password</string>
    <string name="app_id">254453971900808</string>
    <string name="go_back">Go back</string>
    <string name="create">Create</string>
    <string name="my_calendar">MY CALENDAR</string>
    <string name="check_in">Check-in</string>
    <string name="days">* days</string>
    <string name="check_out">Check-out</string>
    <string name="customer">Customer:</string>
    <string name="age">Age:</string>
    <string name="nationality">Nationality:</string>
    <string name="total">Total:</string>
    <string name="see_the_information_of_customner">See the information of customner</string>
    <string name="tour_guider">Tour Guider</string>
    <string name="get_started">Get started</string>
    <string name="homestay">Homestay</string>
    <string name="upload">upload</string>
    <string name="terms_and_conditions">Terms and conditions .....</string>
    <string name="sign_up">Sign Up</string>
    <string name="return_dashboard">Return Dashboard</string>
    <string name="description">Description</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="your_information">YOUR INFORMATION</string>
    <string name="update_your_profile">UPDATE YOUR PROFILE</string>
    <string name="handphone">Handphone</string>
    <string name="male_female">Male/Female</string>
    <string name="identity_card_number">Identity card number</string>
    <string name="your_city">Your city</string>
    <string name="your_nationality">Your nationality</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">Sign out</string>
    <string name="type">Type</string>
    <string name="do_you_want_signout">Do you want sign out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="address">address</string>
    <string name="dash_board">Dash board</string>
    <string name="my_information">My information</string>
    <string name="my_profile">My profile</string>
    <string name="update_my_profile">Update my profile</string>
    <string name="services">Services</string>
    <string name="my_service">My service</string>
    <string name="see_calendar">See calendar</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="about_us">About us</string>
    <string name="change_password">Change password</string>
    <string name="change_language">Change language</string>
    <string name="your_district">Your district</string>
    <string name="your_job">Your job</string>
    <string name="phone">phone</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="job">Job</string>
    <string name="identity_card">Identity card</string>
    <string name="district">District</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="sendfb">SEND FEEDBACK</string>
    <string name="sendfbcus">Send feedback to homestay to improve the service quality</string>
    <string name="rateforus">RATE FOR US</string>
    <string name="seefbfromcus">SEE FEEDBACK FROM CUSTOMER</string>
    <string name="seefbfromcusct">Here are feedback from customer. Let improve your service. Goodluck!</string>


</resources>
