<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btn_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dash_board" />
    </group>
    <item android:title="@string/my_information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/btn_myprofile"
                    android:icon="@drawable/profile"
                    android:title="@string/my_profile" />
                <item
                    android:id="@+id/btn_updatemyprofile"
                    android:icon="@drawable/edit"
                    android:title="@string/update_my_profile" />
            </group>
        </menu>
    </item>
    <item android:title="@string/services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/btncreatemyservice"
                    android:icon="@drawable/createservice"
                    android:title="@string/my_service" />
                <item
                    android:id="@+id/btn_seecalender"
                    android:icon="@drawable/calendar"
                    android:title="@string/see_calendar" />
                <item
                    android:id="@+id/btn_history"
                    android:icon="@drawable/history"
                    android:title="@string/history" />
                </group>
        </menu>
    </item>

    <item android:title="@string/setting">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/btn_aboutus"
                    android:icon="@drawable/about"
                    android:title="@string/about_us" />

                <item
                    android:id="@+id/btn_changpassword"
                    android:icon="@drawable/changepass"
                    android:title="@string/change_password" />
                <item
                    android:id="@+id/btn_changelanguage"
                    android:icon="@drawable/changepass"
                    android:title="@string/change_language" />
                <item
                    android:id="@+id/btn_signout"
                    android:icon="@drawable/signout"
                    android:title="@string/sign_out" />
            </group>
        </menu>
    </item>
</menu>
