<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard"
    android:background="@drawable/bgabout">
    <TextView
        android:layout_marginTop="@dimen/h20"
        android:id="@+id/title_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutus"
        android:textStyle="bold"
        android:textSize="@dimen/t23"
        android:textColor="@color/white"
        android:gravity="center"/>
    <TextView
        android:layout_marginTop="@dimen/h25"
        android:id="@+id/content1"
        android:layout_below="@+id/title_about"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/t18"
        android:text="@string/contentabout"/>
    <TableLayout
        android:id="@+id/content2"
        android:layout_marginTop="@dimen/h15"
        android:gravity="center"
        android:layout_below="@id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:text="@string/CongPhu"
                android:layout_gravity="center"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:text="@string/headbackend"
                android:layout_gravity="left" />
        </TableRow>
        <TableRow>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:layout_gravity="center"
                android:text="@string/GiaHuy"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:layout_gravity="left"
                android:text="@string/headfrontend" />
        </TableRow>
        <TableRow>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:layout_gravity="center"
                android:text="@string/YenNhi"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:text="@string/op"
                android:layout_gravity="left" />
        </TableRow>
        <TableRow>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:layout_gravity="center"
                android:text="@string/VanHoang"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t18"
                android:layout_gravity="left"
                android:text="@string/op" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/content3"
        android:layout_below="@+id/content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/t17"
        android:gravity="center"
        android:layout_marginTop="@dimen/h20"
        android:text="@string/contactus"/>
    <TextView
        android:id="@+id/content4"
        android:layout_below="@+id/content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/t18"
        android:gravity="center"
        android:layout_marginTop="@dimen/h20"
        android:text="@string/thanks"/>
</RelativeLayout>