<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.gogocita.admin.gogocita.users.UpdateUserDetailActivity">

        <ProgressBar
            android:id="@+id/progressBar_updateinformation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <ScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard"
                android:stretchColumns="0,1">
                <TableRow>
                    <TextView
                        android:text="@string/update_your_profile"
                        android:gravity="center"
                        android:layout_span="2"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/EditText_Firstname"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:textSize="@dimen/t20"/>
                    <EditText
                        android:id="@+id/EditText_Lastname"
                        android:inputType="text"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow
                    android:stretchColumns="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/EditText_Birthday"
                        android:inputType="date"
                        android:enabled="false"
                        android:hint="@string/birthday"
                        android:textSize="@dimen/t20"/>
                    <ImageButton
                        android:id="@+id/btn_calander_checkin"
                        android:layout_height="match_parent"
                        android:background="@drawable/calendar1" />
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/EditText_Handphone"
                        android:inputType="phone"
                        android:hint="@string/handphone"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:hint="@string/male_female"
                        android:enabled="false"
                        android:textSize="@dimen/t20"/>
                    <Spinner
                        android:id="@+id/spinner_Gender"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/t20"></Spinner>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/EditText_Job"
                        android:inputType="text"
                        android:hint="@string/your_job"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/EditText_IdentityCard"
                        android:inputType="number"
                        android:hint="@string/identity_card"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/EditText_Address"
                        android:hint="@string/address"
                        android:textSize="@dimen/t20"/>
                </TableRow>
                <TableRow>
                    <EditText
                        android:enabled="false"
                        android:hint="@string/your_district"
                        android:textSize="@dimen/t20"/>
                    <Spinner
                        android:id="@+id/spinner_District"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/t20"></Spinner>
                </TableRow>
                <TableRow>
                    <EditText
                        android:enabled="false"
                        android:hint="@string/your_city"
                        android:textSize="@dimen/t20"/>
                    <Spinner
                        android:id="@+id/spinner_City"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/t20"></Spinner>
                </TableRow>
                <TableRow>
                    <EditText
                        android:enabled="false"
                        android:hint="@string/your_nationality"
                        android:textSize="@dimen/t20"/>

                    <Spinner
                        android:id="@+id/spinner_Nationality"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/t20"></Spinner>
                </TableRow>
                <Button
                    android:id="@+id/button_updateprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_rounded_corners"
                    android:text="@string/update"
                    android:textSize="@dimen/t20"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/h30"/>
            </TableLayout>
        </ScrollView>
       </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_menu_drawer"/>
</android.support.v4.widget.DrawerLayout>
