<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/relative_button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/imagebutton_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_title"
        android:layout_below="@+id/relative_button_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_calendar"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_calendar"
        android:layout_below="@+id/relative_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="16dp">
        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:gravity="center"
            >
            <TableRow>
                <TextView
                    android:id="@+id/textview_checkin"
                    android:text="**/**/2018"
                    />
                <TextView
                    android:layout_column="2"
                    android:id="@+id/textview_checkout"
                    android:text="**/**/2018"
                    android:textAlignment="textEnd"
                    />
            </TableRow>
            <ImageView
                android:src="@drawable/line"/>
            <TableRow>
                <TextView
                    android:text="@string/check_in"
                    android:textColor="#ab0800"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
                <TextView
                    android:text="@string/days"
                    android:layout_gravity="center"
                    android:textColor="#ab0800"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
                <TextView
                    android:text="@string/check_out"
                    android:textAlignment="textEnd"
                    android:textColor="#ab0800"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/customer"
                    android:textSize="16sp"
                    />
                <EditText
                    android:id="@+id/edit_name"
                    android:enabled="false"
                    android:text="**************"
                    android:layout_span="2"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/age"
                    android:textSize="16sp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/edit_age"
                    android:enabled="false"
                    android:text="**"
                    android:layout_span="2"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/nationality"
                    android:textSize="16sp"
                    />
                <EditText
                    android:id="@+id/edit_nationality"
                    android:enabled="false"
                    android:text="**************"
                    android:layout_span="2"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/total"
                    android:textSize="16sp"
                    />
                <EditText
                    android:id="@+id/edit_total"
                    android:enabled="false"
                    android:textSize="16sp"
                    android:text="****** VND"
                    android:layout_span="2"
                    />
            </TableRow>
            <Button
                android:id="@+id/button_infor"
                android:text="@string/see_the_information_of_customner"
                android:textColor="@color/pink"></Button>
        </TableLayout>
    </RelativeLayout>
    <ImageView
        android:layout_below="@+id/relative_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/hr"/>
</RelativeLayout>
