<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/backgroud_book"
        android:background="@drawable/text_bg"
        android:layout_margin="@dimen/standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/standard">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_book_nameofhomestay"
            android:text="@string/nameofhomestay"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/standard"
            android:layout_marginRight="@dimen/standard"
            android:textSize="@dimen/t18" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_book_address"
            android:text="@string/address"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/standard"
            android:layout_marginRight="@dimen/standard"
            android:textSize="@dimen/t16"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/standard"
            android:layout_marginRight="@dimen/standard"
            android:weightSum="2">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/t15"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_book_checkin"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/t15"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/standard"
            android:layout_marginRight="@dimen/standard"
            android:layout_marginBottom="@dimen/standard"
            android:weightSum="2">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/t15"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_book_checkout"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/h15"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h45"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_book_status"
                android:text="@string/status"
                android:textColor="@color/white"
                android:background="@color/confirm"
                android:gravity="center"
                android:textSize="@dimen/t20"/>
            <Button
                android:id="@+id/btn_cancel"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/h16"
                android:gravity="center"
                android:background="@color/cancel"
              />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>